Compiler/tests/bad/function15.nx
function somar(x : [0 .. 2], y : int) : int
{
    return 3;
}
